# ransac

./: CMakeLists.txt  Dockerfile  README.md
lib/: RandomDatapointGenerator.hpp  ransac.hpp
src/: main.cpp
